add icon, add sighash

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "EVMconnector",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "binary-code.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "todo.png",
+      "src": "binary-code.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "todo.png",
+      "src": "binary-code.png",
       "type": "image/png",
       "sizes": "310x310"
     }
