--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "author": "Lauri Peltonen",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "jsoncrush": "^1.1.6"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
