--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "jsoncrush": "^1.1.6"
+    "hardhat-upgrades": "^0.0.0",
+    "jsoncrush": "^1.1.6",
+    "rc-tooltip": "^5.1.1"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
