--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "ethers": "^5.0.31",
+    "evm-chains": "^0.2.0",
     "jsoncrush": "^1.1.6",
     "node-sass": "^5.0.0",
     "normalize-scss": "^7.0.1",
